# prettylog-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: demo.rs  lib.rs  main.rs
src/logger/: file_writer.rs  mod.rs  settings.rs  style.rs
src/types/: ansi.rs  log_type.rs  mod.rs
